@startuml

title __SERVICE's Class Diagram__\n

  namespace com.vrush.microservices.searching {
    namespace service {
      class com.vrush.microservices.searching.service.BookingService {
          {static} - log : Logger
          + BookingService()
          + search()
      }
    }
  }
  

  namespace com.vrush.microservices.searching {
    namespace service {
      class com.vrush.microservices.searching.service.RoomService {
          {static} - log : Logger
          + RoomService()
          + findAvailableRooms()
          + findById()
          + findUnavailableDates()
          + search()
      }
    }
  }
  

  com.vrush.microservices.searching.service.BookingService o-- com.vrush.microservices.searching.mappers.BookingMapper : mapper
  com.vrush.microservices.searching.service.BookingService o-- com.vrush.microservices.searching.repositories.BookingRepository : repository
  com.vrush.microservices.searching.service.RoomService o-- com.vrush.microservices.searching.repositories.BookingDatesRepository : bookingDatesRepository
  com.vrush.microservices.searching.service.RoomService o-- com.vrush.microservices.searching.mappers.RoomMapper : mapper
  com.vrush.microservices.searching.service.RoomService o-- com.vrush.microservices.searching.repositories.RoomRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
